# venus-specs

./: .gitignore  .gitreview  CONTRIBUTING.rst  HACKING.rst  README.rst  setup.cfg  setup.py  tox.ini
doc/source/: conf.py  index.rst
doc/source/specs/: __init__.py  wallaby-template.rst  yoga-template.rst
priorities/: wallaby-priorities.rst  xena-priorities.rst
specs/: 2023.1-antelope-template.rst  2023.2-bobcat-template.rst  antelope-template.rst  bobcat-template.rst  zed-template.rst
specs/antelope/approved/: template.rst
specs/bobcat/approved/: template.rst
